- now also installs the GnuMed core database "gnumed"

--- a/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf
+++ b/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf
@@ -6,25 +6,39 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-gm_db_system.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
-# where to install the users/groups
-[server]
-# minimum version for proper operation
-version = 7.1
+# DB server hosting core database
+# these shouldn't be changed, really
+[core server]
 
+# - should in most cases be localhost as we don't want
+#   to transmit passwords over remote links
+# - also, we need to do some things as a database superuser
+#   (such as installing procedural languages) but we
+#   do not want to be able to connect remotely as superuser
 name = localhost	# fill in your server name/IP here
 port = 5432			# standard is 5432
 
-# these shouldn't be changed, really
-database = template1
-user = postgres
+# the database we connect to before any GnuMed database exists
+initial database = template1
+
+# this must be a super user capable of installing procedural languages
+initial user = postgres
 
 #----------------------------------
 # these really shouldn't be changed
-[defaults]
+[GnuMed defaults]
+
+# minimum PostgreSQL version for proper operation
+postgres version = 7.1
+
+# all GnuMed tables belong to this user
 gnumed database owner = gm-dbowner
+
+# this is the core GnuMed database everything else hinges upon
+core database name = gnumed
 
 # - these are the standard groups that exist
 #   in every GnuMed database
@@ -195,7 +209,10 @@ $custom$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf,v $
-# Revision 1.1  2002-10-31 22:59:19  ncq
+# Revision 1.2  2002-11-01 13:56:05  ncq
+# - now also installs the GnuMed core database "gnumed"
+#
+# Revision 1.1  2002/10/31 22:59:19  ncq
 # - tests environment, bootstraps users, bootstraps procedural languages
 # - basically replaces gnumed.sql and setup-users.py
 #
