new items in brand_index

--- a/gnumed/gnumed/test-area/gmDrug/amis.conf
+++ b/gnumed/gnumed/test-area/gmDrug/amis.conf
@@ -5,11 +5,10 @@
 type=query
 querygroup=brand_index_exact
 query=$query$
-select brandname,connection_id from amis_praeparate where lower(brandname) like '%s%%' order by brandname ASC
+select p.brandname, p.connection_id, m.manufacturer_name_long, p.drug_presentation from amis_praeparate as p, amis_manufacturer as m where lower(brandname) like '%s%%' and m.manufacturer_key=p.manufacturer_key order by brandname,manufacturer_name_long ASC
 $query$
-variables=name,id
+variables=name,id,manufacturer,presentation
 mappings=Key
-
 
 #-----------------------INDEX GENERIC SUBSTANCE NAME -----------------------
 [generic_index1]
@@ -34,13 +33,33 @@ mappings=ID
 
 
 #------------------- product_info -------------------------------
+[Name_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=0
+usedvars=name
+heading=$heading$
+Name
+$heading$
+format=$format$
+%(name)s
+$format$
 
+[Name]
+type=query
+querygroup=product_info
+query=$query$
+select brandname from amis_praeparate where connection_id=%s
+$query$
+variables=name
+mappings=ID
 
 [Darreichung_Format]
 type=format
 querygroup=product_info
 formattype=single
-position=0
+position=1
 usedvars=presentation
 heading=$heading$
 Darreichung
@@ -57,8 +76,6 @@ select drug_presentation from amis_praeparate where connection_id=%s
 $query$
 variables=presentation
 mappings=ID
-
-#--------------------------------------------------------------------
 
 [VWR]
 type=query
@@ -78,12 +95,12 @@ $query$
 variables=drv,drd 
 mappings=ID
 
-
+#---------------------------------------------------------------------------
 [VWR_format0]
 type=format
 querygroup=product_info
 formattype=heading
-position=1
+position=2
 heading=$heading$
 Dosisbezug
 $heading$
@@ -96,7 +113,7 @@ type=format
 querygroup=product_info
 formattype=noheading
 usedvars=drv,drd
-position=2
+position=3
 format=$format$
 
 %(drv)s %(drd)s
@@ -106,7 +123,7 @@ $format$
 type=format
 querygroup=product_info
 formattype=noheading
-position=3
+position=4
 usedvars=vwv,vwu,vwd
 format=$format$
 ( %(vwv)s %(vwu)s %(vwd)s )
@@ -126,7 +143,7 @@ mappings=ID
 type=format
 querygroup=product_info
 formattype=single
-position=4
+position=5
 usedvars=manufacturer
 heading=$heading$
 Hersteller
@@ -270,6 +287,9 @@ mappings=ID
 
 
 # $Log: amis.conf,v $
-# Revision 1.5  2002-10-31 23:13:06  hinnef
+# Revision 1.6  2002-11-09 15:08:24  hinnef
+# new items in brand_index
+#
+# Revision 1.5  2002/10/31 23:13:06  hinnef
 # added generic substance support, further improvements
 #
