--- a/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf
+++ b/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-gm_db_system.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 # DB server hosting core database
@@ -39,6 +39,12 @@ gnumed database owner = gm-dbowner
 
 # this is the core GnuMed database everything else hinges upon
 core database name = gnumed
+
+core database schema = $core database schema$
+../sql/gmconfiguration.sql
+../sql/gmidentity.sql
+../sql/gmgis.sql
+$core database schema$
 
 # - these are the standard groups that exist
 #   in every GnuMed database
@@ -209,7 +215,10 @@ $custom$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf,v $
-# Revision 1.2  2002-11-01 13:56:05  ncq
+# Revision 1.3  2002-11-16 01:12:09  ncq
+# - now finally also imports sql schemata from files
+#
+# Revision 1.2  2002/11/01 13:56:05  ncq
 # - now also installs the GnuMed core database "gnumed"
 #
 # Revision 1.1  2002/10/31 22:59:19  ncq
