--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.5 $
+# $Revision: 1.6 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -76,7 +76,7 @@ cookie = a_unique_string_per_machine
 patient file = ~/gnumed/pat_idx.dat
 
 # which format is the patient file in ?
-patient format = xdt
+patient file format = xdt
 
 # - directories below this one need to be indexed
 # - on Windows use something like "c:\My Documents\GnuMed-Archiv\data\scans\"
@@ -89,16 +89,29 @@ repository = ~/gnumed/scans/
 #-------------------------------
 [import]
 
+# if this exists import can proceed, eg. frontend work is assumed to be complete
 checkpoint file = import.ok
 
-#-------------------------------
-[repositories]
+# if this file exists the dir is assumed to be under import currently
+lock file = importing.now
+
+# this is where the patient data is stored
+patient file = pat_idx.dat
 
 # - this may or may not be the same as index.repository depending
 #   on your indexing client and your setup
-#import = c:\My Documents\GnuMed-Archiv\data\scans\
-#import = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
-import = ~/gnumed/scans/
+#
+#repositories = $repositories$
+#c:\My Documents\GnuMed-Archiv\data\scans\
+#$repositories$
+#
+#repositories = $repositories$
+#c:\Eigene Dateien\GnuMed-Archiv\data\scans\
+#$repositories$
+#
+repositories = $repositories$
+~/gnumed/scans/
+$repositories$
 
 #-------------------------------
 [scanning]
@@ -131,6 +144,16 @@ generate barcode = yes
 barcode generation command = barcode -e 128
 
 #===============================
+[viewer]
+
+# read patient data from here
+patient file = ~/gnumed/pat_view.dat
+patient file format = xdt
+
+# export objects into this directory for display/reuse
+export dir = ~/gnumed/export/
+
+#===============================
 # the database connection
 [database]
 user = 
@@ -141,7 +164,7 @@ database =
 #options = None
 #tty = None
 
-####################################################
+## unused ##########################################
 # scanning:
 # hand this over as the first argument !
 
