--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.6 $
+# $Revision: 1.7 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -97,6 +97,11 @@ lock file = importing.now
 
 # this is where the patient data is stored
 patient file = pat_idx.dat
+patient file format = xdt
+
+# if this file exists a previous import on this directory has succeeded
+# and the files and directory can safely be removed
+completion marker file = imported.txt
 
 # - this may or may not be the same as index.repository depending
 #   on your indexing client and your setup
