- implemented conversion to JPEG in TWAIN, too

--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.8 $
+# $Revision: 1.9 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -144,9 +144,28 @@ show document ID = yes
 #tmp = /tmp/gnumed/
 tmp = ~/gnumed/tmp/
 
-# do we do barcodes ?
+# set this to on/yes if you want a barcode generated
+# and printed on the original document
+# Note: printing isn't implemented yet and thus barcode
+#       generation is meaningless so far
 document barcode mode = off
+
+# this is the external command to run to generate the barcode
 barcode generation command = barcode -e 128
+
+# TWAIN ususally saves scans as bitmaps, while this is
+# lossless it is also uncompressed and consumes humongous
+# amounts of space, therefor you can enable conversion to
+# JPEG here
+# Note: with SANE JPEG is the default
+convert to JPEG = yes
+
+# decrease if you want more compression at the cost of image quality
+# read more here: http://www.augrin.com/prod/jpp/wb_med.html
+JPEG quality level = 75
+
+# set to on/yes if you want progressive jpegs
+progressive JPEG = yes
 
 #===============================
 [viewer]
