- removed gmScanMedDocs which isn't an official plugin yet

--- a/gnumed/gnumed/client/wxpython/gui/plugins.conf.sample
+++ b/gnumed/gnumed/client/wxpython/gui/plugins.conf.sample
@@ -1,7 +1,7 @@
 # GnuMed GUI initial plugin load order configuration
 # --------------------------------------------------
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/client/wxpython/gui/Attic/plugins.conf.sample,v $
-# $Id: plugins.conf.sample,v 1.1 2003-01-05 11:43:48 ncq Exp $
+# $Id: plugins.conf.sample,v 1.2 2003-01-13 00:36:48 ncq Exp $
 #
 # If this file does not exist the GUI will scan the
 # directory and load all files as plugins. If you want
@@ -22,7 +22,6 @@ gmLock
 gmplNbPatientSelector
 gmPatientWindowManager
 gmplNbSchedule
-gmScanMedDocs
 gmSnellen
 gmDrugDisplay
 gmManual
@@ -36,6 +35,9 @@ $load order$
 
 # --------------------------------------------------
 # $Log: plugins.conf.sample,v $
-# Revision 1.1  2003-01-05 11:43:48  ncq
+# Revision 1.2  2003-01-13 00:36:48  ncq
+# - removed gmScanMedDocs which isn't an official plugin yet
+#
+# Revision 1.1  2003/01/05 11:43:48  ncq
 # - first version
 #
