--- a/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
+++ b/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/bootstrap-ng/Attic/bootstrap-gm_db_system.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -73,6 +73,9 @@ $procedural languages$
 #----------------------------------
 [service config]
 database alias = gnumed
+name = default
+version = 0.1
+
 schema = $schema$
 ../sql/gmconfiguration.sql
 $schema$
@@ -80,8 +83,10 @@ postgres version = 7.1
 
 #----------------------------------
 [service patients]
-server = localhost
-database = gnumed
+database alias = gnumed
+name = personalia
+version = 0.1
+
 schema = $schema$
 ../sql/gmidentity.sql
 ../sql/gmgis.sql
@@ -270,7 +275,10 @@ $custom$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf,v $
-# Revision 1.1  2003-01-13 16:55:20  ncq
+# Revision 1.2  2003-01-14 20:52:46  ncq
+# - works "more" :-)
+#
+# Revision 1.1  2003/01/13 16:55:20  ncq
 # - first checkin of next generation
 #
 # Revision 1.3  2002/11/16 01:12:09  ncq
