--- a/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
+++ b/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/bootstrap-ng/Attic/bootstrap-gm_db_system.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -39,9 +39,7 @@ $language library dirs$
 # these really shouldn't be changed
 [GnuMed defaults]
 
-# all GnuMed database objects belong to this user
-database owner = gm-dbowner
-#database owner password =
+database owner alias = GnuMed owner
 
 # - these are the standard groups that exist
 #   in every GnuMed database
@@ -107,6 +105,9 @@ super user = postgres
 super user password =
 
 #----------------------------------
+[user GnuMed owner]
+name = gm-dbowner
+#password = 
 #----------------------------------
 [pg/SQL]
 library name = plpgsql.so
@@ -275,7 +276,10 @@ $custom$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf,v $
-# Revision 1.2  2003-01-14 20:52:46  ncq
+# Revision 1.3  2003-01-21 01:11:09  ncq
+# - current (non-complete) state of affairs
+#
+# Revision 1.2  2003/01/14 20:52:46  ncq
 # - works "more" :-)
 #
 # Revision 1.1  2003/01/13 16:55:20  ncq
