--- a/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
+++ b/gnumed/gnumed/test-area/bootstrap-ng/bootstrap-gm_db_system.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/bootstrap-ng/Attic/bootstrap-gm_db_system.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -70,18 +70,19 @@ $procedural languages$
 
 #----------------------------------
 [service config]
-database alias = gnumed
 name = default
+database alias = gnumed-test
 version = 0.1
 
 schema = $schema$
 ../sql/gmconfiguration.sql
 $schema$
+
 postgres version = 7.1
 
 #----------------------------------
 [service patients]
-database alias = gnumed
+database alias = gnumed-test
 name = personalia
 version = 0.1
 
@@ -89,6 +90,7 @@ schema = $schema$
 ../sql/gmidentity.sql
 ../sql/gmgis.sql
 $schema$
+
 postgres version = 7.1
 
 #----------------------------------
@@ -101,13 +103,17 @@ server alias = localhost
 name = localhost
 port = 5432
 template database = template1
-super user = postgres
-super user password =
+super user alias = postgres
 
 #----------------------------------
 [user GnuMed owner]
 name = gm-dbowner
 #password = 
+
+[user postgres]
+name = postgres
+#password =
+
 #----------------------------------
 [pg/SQL]
 library name = plpgsql.so
@@ -276,7 +282,10 @@ $custom$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf,v $
-# Revision 1.3  2003-01-21 01:11:09  ncq
+# Revision 1.4  2003-01-22 23:21:45  ncq
+# - this sort of documents the whole affair
+#
+# Revision 1.3  2003/01/21 01:11:09  ncq
 # - current (non-complete) state of affairs
 #
 # Revision 1.2  2003/01/14 20:52:46  ncq
