--- a/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-gm_db_system.conf.sample,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -17,8 +17,18 @@ version = $Revision: 1.1 $
 # this has been conceived to make Debian postinst happy :-)
 interactive = yes
 
+# this description is displayed just before the user is
+# prompted whether she acutally wants to install this setup
+description = $description$
+This setup is not intended to actually be used. It just
+serves to document the config file options.
+
+DO NOT USE !
+$description$
+
 # these NEED NOT correspond to GnuMed service names,
-# you just need to have a group corresponding to each line
+# you just need to have a section in this file
+# corresponding to each line
 services = $services$
 config
 patients
@@ -39,6 +49,7 @@ $language library dirs$
 # these really shouldn't be changed
 [GnuMed defaults]
 
+# needs to have a section [user GnuMed owner] in this file
 database owner alias = GnuMed owner
 
 # - these are the standard groups that exist
@@ -66,21 +77,34 @@ procedural languages = $procedural languages$
 pg/SQL
 $procedural languages$
 
+# Python isn't included in the default PostgreSQL
+# binaries yet although this is being discussed,
+# it may soon become a requirement for GnuMed, though
 #pg/Python
 
 #----------------------------------
+# corresponds to one of the services listed under installation
 [service config]
+
+# real GnuMed service name (see docs)
 name = default
+
+# under which [section] do we find database specifics
+# for this service -> [database ...]
 database alias = gnumed-test
+
+# later to be used for service version tracking
 version = 0.1
 
+# the sql files to be imported for this service
 schema = $schema$
 ../sql/gmconfiguration.sql
 $schema$
 
+# the PostgreSQL version necessary to run this service
 postgres version = 7.1
 
-#----------------------------------
+
 [service patients]
 database alias = gnumed-test
 name = personalia
@@ -95,19 +119,41 @@ postgres version = 7.1
 
 #----------------------------------
 [database gnumed]
+
+# the real name of the database in the PostgreSQL system
 name = gnumed
+
+# which [section] holds specifics about the server
+# hosting this databse -> [server ...]
 server alias = localhost
 
 #----------------------------------
 [server localhost]
+
+# can be a host name or an IP address
 name = localhost
+
+# the port on which to connect to the server,
+# standard is 5432
 port = 5432
+
+# the name of the template database on
+# the server
 template database = template1
+
+# which [section] lists particulars about the
+# database server super user -> [user ...]
 super user alias = postgres
 
 #----------------------------------
 [user GnuMed owner]
+
+# the name of the account in PostgreSQL
 name = gm-dbowner
+
+# if the password is not given here the script will
+# ask the user if "interactive" is true, otherwise
+# it will fail
 #password = 
 
 [user postgres]
@@ -115,6 +161,8 @@ name = postgres
 #password =
 
 #----------------------------------
+# don't ask, this is deep magic ;-)
+# meditate over it and enlightenment will be thine
 [pg/SQL]
 library name = plpgsql.so
 
@@ -139,150 +187,11 @@ CREATE TRUSTED PROCEDURAL LANGUAGE 'plpython' HANDLER plpython_call_handler;
 $language activation$
 
 #----------------------------------
-#----------------------------------
-#----------------------------------
-#----------------------------------
-# DB server hosting core database
-# these shouldn't be changed, really
-[core server]
-
-# - should in most cases be localhost as we don't want
-#   to transmit passwords over remote links
-# - also, we need to do some things as a database superuser
-#   (such as installing procedural languages) but we
-#   do not want to be able to connect remotely as superuser
-name = localhost	# fill in your server name/IP here
-port = 5432			# standard is 5432
-
-# the database we connect to before any GnuMed database exists
-initial database = template1
-
-# this must be a super user capable of installing procedural languages
-initial user = postgres
-
-[other]
-# minimum PostgreSQL version for proper operation
-postgres version = 7.1
-
-# this is the core GnuMed database everything else hinges upon
-core database name = gnumed
-
-core database schema = $core database schema$
-../sql/gmconfiguration.sql
-../sql/gmidentity.sql
-../sql/gmgis.sql
-$core database schema$
-
-#----------------------------------
-# this is a setup for testing
-# don't use this on a production server
-[test users]
-
-# - list all the users here that you want to set up
-# - you will then need to define a [section] per user
-#   giving more detail
-#
-# - you should definitely disable the sample account
-#   and define your own users
-users = $users$
-test-doc
-_test-doc
-test-nurse
-_test-nurse
-test-secretary
-_test-secretary
-$users$
-
-#----------------------------------
-[test-doc]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-doctors
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
-[_test-doc]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-doctors
-_gm-doctors
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
-[test-nurse]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-staff_medical
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
-[_test-nurse]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-staff_medical
-_gm-staff_medical
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
-[test-secretary]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-staff_office
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
-[_test-secretary]
-valid until = 2003-12-31
-
-# which groups this user shall belong to
-groups = $groups$
-gm-staff_office
-_gm-staff_office
-gm-public
-$groups$
-
-# custom SQL commands for this user
-custom = $custom$
-$custom$
-
-#----------------------------------
 # $Log: bootstrap-gm_db_system.conf.sample,v $
-# Revision 1.1  2003-01-26 12:47:17  ncq
+# Revision 1.2  2003-01-26 13:30:25  ncq
+# - document all options
+#
+# Revision 1.1  2003/01/26 12:47:17  ncq
 # - next generation from test-area/
 #
 # Revision 1.4  2003/01/22 23:21:45  ncq
