--- a/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
+++ b/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/gm-debian-postinst.conf.sample,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -40,28 +40,6 @@ language library dirs = $language library dirs$
 /usr/lib/postgresql/lib/
 /usr/lib/pgsql/
 $language library dirs$
-
-#----------------------------------
-# these really shouldn't be changed
-[GnuMed defaults]
-
-database owner alias = GnuMed owner
-
-groups = $groups$
-gm-doctors
-_gm-doctors
-gm-staff_medical
-_gm-staff_medical
-gm-staff_office
-_gm-staff_office
-gm-trainees_medical
-gm-trainees_office
-gm-public
-$groups$
-
-procedural languages = $procedural languages$
-pg/SQL
-$procedural languages$
 
 #----------------------------------
 # services
@@ -124,6 +102,30 @@ name = gm-dbowner
 name = postgres
 #password =
 
+#----------------------------------------------
+# the following sections really shouldn't
+# be changed unless you know what you are doing
+#----------------------------------------------
+[GnuMed defaults]
+
+database owner alias = GnuMed owner
+
+groups = $groups$
+gm-doctors
+_gm-doctors
+gm-staff_medical
+_gm-staff_medical
+gm-staff_office
+_gm-staff_office
+gm-trainees_medical
+gm-trainees_office
+gm-public
+$groups$
+
+procedural languages = $procedural languages$
+pg/SQL
+$procedural languages$
+
 #----------------------------------
 # languages
 #----------------------------------
@@ -138,7 +140,7 @@ language activation = $language activation$
 CREATE TRUSTED PROCEDURAL LANGUAGE 'plpgsql' HANDLER plpgsql_call_handler LANCOMPILER 'PL/pgSQL';
 $language activation$
 
-#----------------------------------
+
 [pg/Python]
 library name = plpython.so
 
@@ -152,7 +154,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf.sample,v $
-# Revision 1.1  2003-01-28 09:34:11  ncq
+# Revision 1.2  2003-01-28 09:37:22  ncq
+# - moved unchanging defaults to bottom of file
+#
+# Revision 1.1  2003/01/28 09:34:11  ncq
 # - for Debian to play around with
 #
 # Revision 1.2  2003/01/27 01:48:03  ncq
