--- a/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-gm_db_system.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -145,6 +145,14 @@ template database = template1
 # database server super user -> [user ...]
 super user alias = postgres
 
+# you can put some schema files here,
+# they will be imported into the template database
+# so be very careful,
+# this is mainly useful for importing database accounts
+# for an example see server/sql/gmTestAccounts.sql
+schema = $schema$
+$schema$
+
 #----------------------------------
 [user GnuMed owner]
 
@@ -188,7 +196,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf.sample,v $
-# Revision 1.2  2003-01-26 13:30:25  ncq
+# Revision 1.3  2003-01-28 13:39:14  ncq
+# - implemented schema import at the server level (= template database)
+# - this is mainly useful for importing users
+#
+# Revision 1.2  2003/01/26 13:30:25  ncq
 # - document all options
 #
 # Revision 1.1  2003/01/26 12:47:17  ncq
