--- a/gnumed/gnumed/server/utils/localhost-monolithic.conf.sample
+++ b/gnumed/gnumed/server/utils/localhost-monolithic.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/localhost-monolithic.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -18,10 +18,10 @@ This will set up a standard monolithic test system for GnuMed
 that is immediately useable. It will contain patient demographics,
 clinical tables, german translations and some sample data.
 
-There's also some test accounts for access to the database.
-Please refer to server/sql/gmTestAccounts.sql to learn more
-about those. If you import them YOU MUST make sure to remove
-them prior to going life on a production system because they
+There's also some test accounts included for access to the
+database. Please refer to server/sql/gmTestAccounts.sql to
+learn more about those. YOU MUST make sure to remove them
+prior to going life on a production system because they
 currently apply to ALL databases.
 
 The database name will be "gnumed-test" which is expected
@@ -110,6 +110,9 @@ name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
+schema = $schema$
+sql/gmTestAccounts.sql
+$schema$
 
 #----------------------------------
 # users
@@ -150,7 +153,11 @@ $language activation$
 
 #----------------------------------
 # $Log: localhost-monolithic.conf.sample,v $
-# Revision 1.2  2003-01-27 01:48:03  ncq
+# Revision 1.3  2003-01-28 13:39:14  ncq
+# - implemented schema import at the server level (= template database)
+# - this is mainly useful for importing users
+#
+# Revision 1.2  2003/01/27 01:48:03  ncq
 # - updated to be more complete, added description
 #
 # Revision 1.1  2003/01/26 12:47:17  ncq
