--- a/gnumed/gnumed/server/utils/localhost-monolithic.conf.sample
+++ b/gnumed/gnumed/server/utils/localhost-monolithic.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/localhost-monolithic.conf.sample,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -92,7 +92,7 @@ database alias = core
 postgres version = 7.1
 schema = $schema$
 sql/gmclinical.sql
-sql/country.specific/de/german-clinical.sql
+sql/country.specific/de/german-gmclinical.sql
 $schema$
 
 #----------------------------------
@@ -153,7 +153,10 @@ $language activation$
 
 #----------------------------------
 # $Log: localhost-monolithic.conf.sample,v $
-# Revision 1.3  2003-01-28 13:39:14  ncq
+# Revision 1.4  2003-01-30 09:00:05  ncq
+# - fixed typo
+#
+# Revision 1.3  2003/01/28 13:39:14  ncq
 # - implemented schema import at the server level (= template database)
 # - this is mainly useful for importing users
 #
