--- a/gnumed/gnumed/server/utils/bootstrap-archive.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-archive.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-archive.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -103,6 +103,9 @@ name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
+schema = $schema$
+sql/gmTestAccounts.sql
+$schema$
 
 #----------------------------------
 # users
@@ -131,7 +134,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf.sample,v $
-# Revision 1.2  2003-01-26 13:14:36  ncq
+# Revision 1.3  2003-02-02 14:12:30  ncq
+# - add schema to server defs
+#
+# Revision 1.2  2003/01/26 13:14:36  ncq
 # - show a description before installing
 # - ask user for confirmation if interactive
 #
