--- a/gnumed/gnumed/test-area/blobs_hilbert/server/bootstrap-archive.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/server/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/server/Attic/bootstrap-archive.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -81,6 +81,9 @@ name = localhost
 port = 5432
 template database = template1
 super user alias = postgres
+# you can put user import SQL files here:
+schema = $schema$
+$schema$
 
 #----------------------------------
 # these really shouldn't be changed
@@ -132,7 +135,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.1  2003-02-02 14:08:49  ncq
+# Revision 1.2  2003-02-02 14:13:42  ncq
+# - added a note on server level schemata
+#
+# Revision 1.1  2003/02/02 14:08:49  ncq
 # - updated install
 # - new bootstrap config file
 #
