--- a/gnumed/gnumed/server/utils/bootstrap-archive.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-archive.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-archive.conf.sample,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -61,18 +61,19 @@ name = default
 version = 0.1
 database alias = gm-archive
 postgres version = 7.1
+registration database = gm-archive
 schema = $schema$
 sql/gmconfiguration.sql
 sql/gmServices.sql
 $schema$
 
 # first one already imports gmServices, so ...
-
 [service demographics]
 name = personalia
 version = 0.1
 database alias = gm-archive
 postgres version = 7.1
+registration database = gm-archive
 schema = $schema$
 sql/gmidentity.sql
 sql/gmgis.sql
@@ -83,6 +84,7 @@ name = blobs
 version = 0.1
 database alias = gm-archive
 postgres version = 7.1
+registration database = gm-archive
 schema = $schema$
 sql/gmBlobs.sql
 sql/country.specific/de/german-doc_types.sql
@@ -134,7 +136,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf.sample,v $
-# Revision 1.3  2003-02-02 14:12:30  ncq
+# Revision 1.4  2003-02-09 11:46:11  ncq
+# - added core database option for registering services
+# - convenience function _run_query()
+#
+# Revision 1.3  2003/02/02 14:12:30  ncq
 # - add schema to server defs
 #
 # Revision 1.2  2003/01/26 13:14:36  ncq
