--- a/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-gm_db_system.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-gm_db_system.conf.sample,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -104,6 +104,9 @@ $schema$
 # the PostgreSQL version necessary to run this service
 postgres version = 7.1
 
+# database alias in which to register this service
+registration database = gnumed
+
 
 [service patients]
 database alias = gnumed-test
@@ -116,6 +119,8 @@ schema = $schema$
 $schema$
 
 postgres version = 7.1
+
+registration database = gnumed
 
 #----------------------------------
 [database gnumed]
@@ -196,7 +201,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-gm_db_system.conf.sample,v $
-# Revision 1.3  2003-01-28 13:39:14  ncq
+# Revision 1.4  2003-02-09 11:46:11  ncq
+# - added core database option for registering services
+# - convenience function _run_query()
+#
+# Revision 1.3  2003/01/28 13:39:14  ncq
 # - implemented schema import at the server level (= template database)
 # - this is mainly useful for importing users
 #
