--- a/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
+++ b/gnumed/gnumed/server/utils/gm-debian-postinst.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/gm-debian-postinst.conf.sample,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 [installation]
@@ -49,6 +49,7 @@ name = default
 version = 0.1
 database alias = core
 postgres version = 7.1
+registration database = core
 schema = $schema$
 sql/gmconfiguration.sql
 sql/gmServices.sql
@@ -59,6 +60,7 @@ name = personalia
 version = 0.1
 database alias = core
 postgres version = 7.1
+registration database = core
 schema = $schema$
 sql/gmidentity.sql
 sql/gmgis.sql
@@ -70,6 +72,7 @@ name = historica
 version = 0.1
 database alias = core
 postgres version = 7.1
+registration database = core
 schema = $schema$
 sql/gmclinical.sql
 sql/country.specific/de/german-gmclinical.sql
@@ -157,7 +160,11 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf.sample,v $
-# Revision 1.4  2003-01-30 09:01:38  ncq
+# Revision 1.5  2003-02-09 11:46:11  ncq
+# - added core database option for registering services
+# - convenience function _run_query()
+#
+# Revision 1.4  2003/01/30 09:01:38  ncq
 # - german-clinical -> german-gmclinical
 #
 # Revision 1.3  2003/01/28 13:39:14  ncq
