--- a/gnumed/gnumed/server/utils/bootstrap-standard-AU.conf.sample
+++ b/gnumed/gnumed/server/utils/bootstrap-standard-AU.conf.sample
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/bootstrap-standard-AU.conf.sample,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -84,7 +84,10 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmidentity.sql
+sql/gmIdentityData.sql
+sql/gmIdentityTestData.sql
 sql/gmgis.sql
+sql/gmGisData.sql
 sql/country.specific/au/postcodes.au.sql
 $schema$
 
@@ -96,6 +99,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
+sql/gmClinicalData.sql
 $schema$
 
 #----------------------------------
@@ -156,7 +160,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf.sample,v $
-# Revision 1.2  2003-02-13 17:23:31  ncq
+# Revision 1.3  2003-02-15 09:10:53  ncq
+# - split into bootstrap-standard-COUNTRY.* and migrate-standard.*
+#
+# Revision 1.2  2003/02/13 17:23:31  ncq
 # - tailored description string to reflect purpose
 #
 # Revision 1.1  2003/02/13 17:20:59  ncq
